-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.8.0 Beta4
-
None
-
-
c28fa0f76 (dev), 65b4530b3 (6.8), 3bfec8f89 (tqtc/lts-6.5), 78640ffe6 (dev), d7f9fa813 (dev)
MacOS 14.6.1
Qt Creator 14.0.2
Qt 6.8.0b4
Steps to reproduce:
- Launch multipage pdf example
- Open attached sample pdf.
- Zoom in to the max then start changing the pages
- Zoom out to the max then start changing the pages
- After 3-4 times of repeating steps 3-4 open another pdf file.
Expected: The file should be opened.
Actual: The app significantly slows down when zooming in and out and crashes when opening another pdf file. Attaching the crash report from MacOS. It crashes on linux as well.
qt.pdf.links: failed to load page 8 qt.pdf.links: failed to load page 6 qt.pdf.links: failed to load page 16 qt.pdf.links: failed to load page 15 qt.pdf.links: failed to load page 14 qt.pdf.links: failed to load page 13 qt.pdf.links: failed to load page 12 qt.pdf.links: failed to load page 11 18:59:27: /Users/lukaszkosiorowski/Qt/Examples/Qt-6.8.0/pdf/multipage/build/Qt_6_8_0_for_macOS-Debug/multipage.app/Contents/MacOS/multipage crashed.
Reproducibility: 100%
- relates to
-
QTQAINFRA-6591
Qt Test Attack - Q3, 2024
-
- Open
-
| For Gerrit Dashboard: QTBUG-128875 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 591361,9 | Use QPointer for QQuickPixmapData::specialDevice; abort if deleted | dev | qt/qtdeclarative | Status: MERGED | +2 | +1 |
| 591890,8 | Add internal docs about async image loading with a QIODevice subclass | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 592474,5 | QPdfFile: allow Qt Quick to change thread affinity to its own renderer | dev | qt/qtwebengine | Status: MERGED | +2 | 0 |
| 592549,3 | Abort QQuickPixmapReader job if specialDevice deleted | dev | qt/qtdeclarative | Status: ABANDONED | 0 | 0 |
| 595620,2 | Use QPointer for QQuickPixmapData::specialDevice; abort if deleted | 6.8 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 595642,5 | Use QPointer for QQuickPixmapData::specialDevice; abort if deleted | tqtc/lts-6.5 | qt/tqtc-qtdeclarative | Status: MERGED | +2 | 0 |